# rge-campaign-py

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
aoe2_mccampaign/: __init__.py  campaign.py
rge_campaign_py/: __init__.py
