[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rge-campaign-py"
version = "0.1.0"
description = "Pure-Python reader for AoE campaign containers (.cpn, .cpx, .aoe2campaign)."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Contributors" }]
keywords = ["age-of-empires", "aoe2", "campaign", "rge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/UnluckyForSome/rge-campaign-py"
Repository = "https://github.com/UnluckyForSome/rge-campaign-py"

[tool.setuptools.packages.find]
where = ["."]
include = ["rge_campaign_py*"]
